--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 DJANGO_SECRET_KEY=
-POSTGRES_PORT=
+DEBUG=
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NON_POOLING=
 POSTGRES_USER=
 POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+DJANGO_ADMIN_USERNAME=
+DJANGO_ADMIN_PASSWORD=
