WIP: admin creation

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ POSTGRES_USER=
 POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
-DJANGO_ADMIN_USERNAME=
-DJANGO_ADMIN_PASSWORD=
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_EMAIL=
+DJANGO_SUPERUSER_PASSWORD=
