--- a/theme.toml
+++ b/theme.toml
@@ -1,13 +1,13 @@
-name = "TailBliss"
+name = "Esscrypt"
 license = "Apache-2.0"
 licenselink = "https://github.com/nusserstudios/tailbliss/blob/main/LICENSE"
-description = "TailBliss is an Hugo Starter with Tailwind CSS 3.2 and Alpine.js with light and dark modes. Submitted for Hacktoberfest 2022."
+description = "Esscrypt delivers innovative software solutions, focusing on custom development, cloud services, and cutting-edge technologies like blockchain and AI. Committed to integrity and customer satisfaction, Esscrypt transforms business operations with digital excellence."
 
 # The home page of the theme, where the source can be found.
 homepage = "https://github.com/nusserstudios/tailbliss"
 
 # If you have a running demo of the theme.
-demosite = "https://tailbliss.netlify.app/"
+# demosite = "https://tailbliss.netlify.app/"
 
 tags = ["blog", "tailwind", "tailwindcss", "dark", "light", "responsive", "minimal", "portfolio", "company", "gallery", "personal" ]
 features = ["blog", "categories", "webp", "tailwind3", "alpinejs"]
