--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,11 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Install Hugo
+      run: |
+        wget -O hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.89.4/hugo_0.89.4_Linux-64bit.deb
+        sudo dpkg -i hugo.deb
+
     - name: Run build
       run: npm run build  # Your build script that generates output in /docs
 
